--- a/code/zcgl/Dockerfile
+++ b/code/zcgl/Dockerfile
@@ -1,22 +1,20 @@
-FROM ubuntu:20.04
-USER 0
+# 从仓库拉取带有 python 3.8 的 Linux 环境
+FROM python:3.8-slim-buster
 
-RUN echo 'install python3-pip vim'
+# 设置 python 环境变量
+ENV PYTHONUNBUFFERED 1
+
+# 创建 code 文件夹并将其设置为工作目录
+RUN mkdir /code
+WORKDIR /code
+
+#为安装mysqlclient做准备，直接安装mysqlclient会失败
 RUN apt-get update && \
-    apt-get install -y python3-pip vim
+    apt-get install -y vim python3-dev default-libmysqlclient-dev build-essential
 
+# 将当前目录复制到容器的 code 目录
+ADD . /code/
 
-RUN echo 'install mysqlclient'
-RUN apt install python3-dev build-essential && \
-    apt install libssl1.1 && \
-    apt install libssl1.1=1.1.1f-1ubuntu2 && \
-    apt install libssl-dev && \
-    apt install libmysqlclient-dev && \
-    pip3 install mysqlclient
+# 安装库
+RUN pip install -r requirements.txt
 
-RUN echo 'install python package'
-RUN pip3 install --upgrade pip && \
-    pip3 install --no-cache-dir -r requirements.txt
-
-RUN echo 'run django'
-RUN ['python3 manage.py runserver']
